@@ -21,7 +21,7 @@ public class WebConfig implements WebMvcConfigurer{
 	@Bean
 	public LocaleResolver localeResolver() {
 		SessionLocaleResolver slr = new SessionLocaleResolver();
-		slr.setDefaultLocale(new Locale("es"));
+		slr.setDefaultLocale(Locale.of("es"));
 		return slr;
 	}
 	
